# nbody_gui

./: .gitignore  Makefile  meson.build
src/: imgui-SFML.cpp  imgui_elements.cpp  imgui_elements.cu  main.cpp  main.cu  meson.build  physics.cpp  physics.cu  quadtree.cpp  quadtree.cu  vector.cu
src/include/: physics.cuh  physics.h  quadtree.h  vector.cuh
src/include/imgui/: imconfig.h  imgui-elements.cuh  imgui-elements.h
